--- a/ManualTester/MainWindow.xaml
+++ b/ManualTester/MainWindow.xaml
@@ -12,11 +12,8 @@
         </GroupBox>
         <TextBox  
                   AcceptsReturn="True"
-                  VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Name="Rql" TextChanged="Rql_OnTextChanged" Margin="24,43,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="371" Height="216"/>
-        <TextBox  
-            AcceptsReturn="True"
-            VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" x:Name="ErrorShow" IsEnabled="False" Margin="400,15,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="390" Height="244"/>
-        <CheckBox Content="Checking enabled." Name="cbParser" IsChecked="False" HorizontalAlignment="Left" Margin="24,23,0,0" VerticalAlignment="Top"/>
+                  VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Name="Rql" TextChanged="Rql_OnTextChanged" Margin="24,43,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="760" Height="216"/>
+        <CheckBox Content="Checking enabled." Name="cbParser" IsChecked="True" HorizontalAlignment="Left" Margin="24,23,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
